templates/base.html; 콩순이/character_list.html

--- a/콩순이/templates/콩순이/character_list.html
+++ b/콩순이/templates/콩순이/character_list.html
@@ -1,23 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Character List</title>
-</head>
-<body>
-    <table border="1">
-        <tr>
-            <th>#</th>
-            <th>name</th>
-            <th>feature</th>
-        </tr>
-        {% for character in character_list %}
-        <tr>
-            <td>{{ forloop.counter }}</td>
-            <td>{{ character.name }}</td>
-            <td>{{ character.feature }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Character List{% endblock %}
+
+{% block content %}
+<table class="table">
+    <tr>
+        <th>#</th>
+        <th>name</th>
+        <th>feature</th>
+    </tr>
+    {% for character in character_list %}
+    <tr>
+        <td>{{ forloop.counter }}</td>
+        <td>{{ character.name }}</td>
+        <td>{{ character.feature }}</td>
+    </tr>
+    {% endfor %}
+</table>
+{% endblock %}
