models/get_absolute_url(); views CharacterDetailView; templates character_detail.html, character_list.html; urls 콩순이:character_detail pk

--- a/콩순이/templates/콩순이/character_list.html
+++ b/콩순이/templates/콩순이/character_list.html
@@ -12,7 +12,7 @@
     {% for character in character_list %}
     <tr>
         <td>{{ forloop.counter }}</td>
-        <td>{{ character.name }}</td>
+        <td><a href="{% url '콩순이:character_detail' pk=character.id %}">{{ character.name }}</a></td>
         <td>{{ character.feature }}</td>
     </tr>
     {% endfor %}
