views CharacterCreateView; templates character_list.html, character_create.html; urls 콩순이:character_create

--- a/콩순이/templates/콩순이/character_list.html
+++ b/콩순이/templates/콩순이/character_list.html
@@ -16,5 +16,8 @@
         <td>{{ character.feature }}</td>
     </tr>
     {% endfor %}
+    <tr>
+        <td colspan="3"><a href="{% url '콩순이:character_create' %}" class="btn btn-success">+ Character</a></td>
+    </tr>
 </table>
 {% endblock %}
