views CharacterUpdateView; templates character_list.html, character_update.html; urls 콩순이:character_update

--- a/콩순이/templates/콩순이/character_list.html
+++ b/콩순이/templates/콩순이/character_list.html
@@ -8,16 +8,18 @@
         <th>#</th>
         <th>name</th>
         <th>feature</th>
+        <th>edit</th>
     </tr>
     {% for character in character_list %}
     <tr>
         <td>{{ forloop.counter }}</td>
         <td><a href="{% url '콩순이:character_detail' pk=character.id %}">{{ character.name }}</a></td>
         <td>{{ character.feature }}</td>
+        <td><a href="{% url '콩순이:character_update' pk=character.id %}" class="btn btn-warning">🛠</a></td>
     </tr>
     {% endfor %}
     <tr>
-        <td colspan="3"><a href="{% url '콩순이:character_create' %}" class="btn btn-success">+ Character</a></td>
+        <td colspan="4"><a href="{% url '콩순이:character_create' %}" class="btn btn-success">+ Character</a></td>
     </tr>
 </table>
 {% endblock %}
