--- a/콩순이/templates/콩순이/character_list.html
+++ b/콩순이/templates/콩순이/character_list.html
@@ -6,6 +6,7 @@
 <table class="table">
     <tr>
         <th>#</th>
+        <th>photo</th>
         <th>name</th>
         <th>feature</th>
         <th>edit</th>
@@ -14,6 +15,14 @@
     {% for character in character_list %}
     <tr>
         <td>{{ forloop.counter }}</td>
+        <td>
+            {% if character.photo == None %}
+                {% load static %}
+                <img src="{% static '콩순이/photo/no_photo.png' %}" alt="사진 없음" style="width: 100px; height: 100px; object-fit: cover;">
+            {% else %}
+                <img src="{{ character.photo.url }}" alt="업로드한 사진" style="width: 100px; height: 100px; object-fit: cover;">
+            {% endif %}
+        </td>
         <td><a href="{% url '콩순이:character_detail' pk=character.id %}">{{ character.name }}</a></td>
         <td>{{ character.feature }}</td>
         <td><a href="{% url '콩순이:character_update' pk=character.id %}" class="btn btn-warning">🛠</a></td>
