--- a/콩순이/templates/콩순이/character_create.html
+++ b/콩순이/templates/콩순이/character_create.html
@@ -3,7 +3,7 @@
 {% block title %}Create Character{% endblock %}
 
 {% block content %}
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="+ Character" class="btn btn-success">
